--- a/.gitignore
+++ b/.gitignore
@@ -122,12 +122,27 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
+*.env
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Secrets and tokens
+*.token
+*.key
+*.secret
+**/secrets/
+**/tokens/
+
+# Logs and runtime files
+logs/
+*.log
+*.pid
+*.lock
 
 # Spyder project settings
 .spyderproject
